--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 	<h1>Picture in picture youtube</h1>
 
-	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/HQE456q4n5U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/HQE456q4n5U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-	<div>
+	<!-- <div>
 		<button id="videobutton2" class="videobutton" data-url="https://youtu.be/HQE456q4n5U">show video</button>
 	</div>
 
-	<div id="ytvideo"></div>
+	<div id="ytvideo"></div> -->
 
 </body>
 </html>
