--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
 	<title>pipyt</title>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="index.css">
+	<script src="index.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
 	<h1>Picture in picture youtube</h1>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/HQE456q4n5U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<input type="text" id="myText">
+	<button onclick="myFunction()">Go</button>
 
-	
+	<pre id="myCode"></pre>
+
 
 </body>
 </html>
