--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 			<button class="content__button" onclick="myFunction()">Go</button>
 		</div>
 
-		<pre id="myCode"></pre>
+		
+			
+		<div id="myCode"></div>
+			
+		
+		
 	</div>
 
 </body>
